--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><meta http-equiv="refresh" content="0; url=http://repo.github.io/folder/index.html" />
+<html><meta http-equiv="refresh" content="0; url=http://wiha.github.io/map-project/build/index.html" />
 <head>
 </head>
 <title> Diminished Marginal History</title>
