--- a/about.html
+++ b/about.html
@@ -45,9 +45,10 @@
        <summary class= "smallheader"> How did the idea come about? </summary>
        <h2>An idea is like a lightbulb. Except that it's not a lightbulb</h2>
         <p> I wanted to translate code into a visual and understandable project. Maps, above all, are a coded way of seeing the world; I could have chosen from a hundred different kind of maps, yet I chose this one, and yet it does no justice to the experience of actually walking around in the city. You see what the map chooses to show you. In code, you see what I choose to show you. Besides that, the project is an investigation to how I could use coding as a means of interactive storytelling and creating narratives.<br><br>
-        This project is a research in progress, an attempt to approach choice making and theories of choice making as a cultural objects. 
+        This project is a research in progress, an attempt to approach choice making and theories of choice making as cultural objects. 
         What do they tell us about the way we see the world? How do we make decisions and what is lost when we do? What do theories of choice explain, and
-        what don't they account for?<br></p>
+        what don't they account for?<br>
+        For some more general 'core thoughts' I came across when researching choices, coding, history and maps, checkout the quote randomiser.</p>
      </details>
   </article>
    <article>
